--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -25,8 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".simulate"
-            android:label="@string/simulate"/>
+        <activity
+            android:name=".simulate"
+            android:label="@string/simulate" />
+        <activity android:name=".addRover"></activity>
     </application>
 
 </manifest>
