Add rover name added in title

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         <activity
             android:name=".simulate"
             android:label="@string/simulate" />
-        <activity android:name=".addRover"></activity>
+        <activity
+            android:name=".addRover"
+            android:label="@string/addRover"/>
     </application>
 
 </manifest>
