View rover page added

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
             android:label="@string/simulate" />
         <activity
             android:name=".addRover"
-            android:label="@string/addRover"/>
+            android:label="@string/addRover" />
+        <activity android:name=".viewRover"></activity>
     </application>
 
 </manifest>
