--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -37,7 +37,11 @@
         <activity
             android:name=".deleteRover"
             android:label="@string/deleteRover" />
-        <activity android:name=".roverDetails"></activity>
+        <activity android:name=".roverDetails"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
