--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/liveFeed"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
@@ -28,7 +28,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".Login" >
+        <activity android:name=".Login"
+
+            android:label="@string/login"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
