--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".uploadPathOnline"></activity>
+        <activity android:name=".uploadPathOnline"
+            android:label="@string/updateOnline"
+            ></activity>
     </application>
 
 </manifest>
